# explorer

./: README.md
explorer-server/: Cargo.toml  config.dist.toml
explorer-server-mock/: Cargo.toml
explorer-server-mock/src/: lib.rs  mocker.rs  server.rs
explorer-server/code/: address.js  common.js  timestamps.js  txs.js
explorer-server/code/styles/: index.css
explorer-server/src/: api.rs  config.rs  formatting.rs  indexer.rs  lib.rs  main.rs  server.rs  server_http.rs  server_primitives.rs  templating.rs
explorer-server/src/templating/: filters.rs
explorer-server/templates/components/: input.html  output.html  token_info_table.html
explorer-server/templates/pages/: address.html  block.html  error.html  transaction.html
explorer-server/tests/: test_api.rs
